syntax = "proto3";

package reservation;

message Reservation {
  int32 id = 1;
  string name = 2;
  int32 hotelId = 3;
  int32 roomId = 4;
  string checkInDate = 5;
  string checkOutDate = 6;
}

service ReservationCRUDService {
  rpc GetReservation(GetReservationRequest) returns (Reservation) {}
  rpc ListReservations(ListReservationsRequest) returns (ListReservationsResponse) {}
  rpc CreateReservation(CreateReservationRequest) returns (Reservation) {}
  rpc UpdateReservation(UpdateReservationRequest) returns (Reservation) {}
  rpc DeleteReservation(DeleteReservationRequest) returns (DeleteReservationResponse) {}
}

message GetReservationRequest {
  int32 id = 1;
}

message ListReservationsRequest {
  int32 hotelId = 1;
  int32 roomId = 2;
  string checkInDate = 3;
  string checkOutDate = 4;
}

message ListReservationsResponse {
  repeated Reservation reservations = 1;
}

message CreateReservationRequest {
  string name = 1;
  int32 hotelId = 2;
  int32 roomId = 3;
  string checkInDate = 4;
  string checkOutDate = 5;
}

message UpdateReservationRequest {
  int32 id = 1;
  string name = 2;
  int32 hotelId = 3;
  int32 roomId = 4;
  string checkInDate = 5;
  string checkOutDate = 6;
}

message DeleteReservationRequest {
  int32 id = 1;
}

message DeleteReservationResponse {
  Reservation reservation = 1;
}

